--- a/client.html
+++ b/client.html
@@ -65,10 +65,11 @@
 </head>
 <body>
 <div class="PasswordView" style="display: none;">
-  <div class="Message Message--stored-data-does-not-exists">В этом браузере есть сохраненные данные,<br> введите пароль и погнали!</div>
-  <div class="Message Message--stored-data-exists">
-    В этом браузере нет сохраненных данных,<br> придумайте пароль и погнали!<br>
-    <button class="Button Button--clear-data" style="margin-top: 10px;">Очистить данные</button>
+  <div class="Message Message Message--stored-data-exists">У этой странички есть сохраненные данные в памяти,<br> введите пароль для расшифровки и погнали!
+    <button class="Button Button--clear-data" style="margin-top: 10px;">Если вы забыли пароль, то нажмите эту кнопку и начните все заново. Это не страшно!</button>
+  </div>
+  <div class="Message Message--stored-data-does-not-exists"> 
+    Сейчас у странички нет сохраненных данных,<br> придумайте пароль для дальнейшей защиты данных и погнали!<br>
   </div>
 
   <form class="PasswordForm">
