--- a/client.html
+++ b/client.html
@@ -222,7 +222,7 @@
   const { createApp, ref, reactive, watch, computed } = window.Vue
   const { ElMessage } = window.ElementPlus
 
-  const SOCKET_SERVER_URL = 'fewcats.com'
+  const SOCKET_SERVER_URL = 'https://fewcats.com/'
   const PROVIDERS = {
     eth: {
       mainnet: 'https://rpc.ankr.com/eth',
