Remove address generation. Should use metamask instead

--- a/client.html
+++ b/client.html
@@ -59,7 +59,7 @@
         </el-button>
         <template #dropdown>
           <el-dropdown-menu>
-            <el-dropdown-item icon="Plus" @click="dialogsVisibility.generateKeys = true">Сгенерировать ключи</el-dropdown-item>
+<!--            <el-dropdown-item icon="Plus" @click="dialogsVisibility.generateKeys = true">Сгенерировать ключи</el-dropdown-item>-->
             <el-dropdown-item icon="Upload" @click="dialogsVisibility.importKeys = true">Импортировать ключи</el-dropdown-item>
             <el-dropdown-item icon="Download" @click="dialogsVisibility.exportKeys = true">Экспортировать ключи</el-dropdown-item>
             <el-dropdown-item icon="List" @click="copyAllAddresses()">Копировать адреса</el-dropdown-item>
